docs/0.10/_sources/api/gammapy.maps.Map.rst.txt
Map
===

.. currentmodule:: gammapy.maps

.. autoclass:: Map
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Map.data
      ~Map.geom
      ~Map.meta
      ~Map.quantity
      ~Map.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~Map.coadd
      ~Map.copy
      ~Map.create
      ~Map.crop
      ~Map.downsample
      ~Map.fill_by_coord
      ~Map.fill_by_idx
      ~Map.fill_by_pix
      ~Map.from_geom
      ~Map.from_hdulist
      ~Map.get_by_coord
      ~Map.get_by_idx
      ~Map.get_by_pix
      ~Map.get_image_by_coord
      ~Map.get_image_by_idx
      ~Map.get_image_by_pix
      ~Map.interp_by_coord
      ~Map.interp_by_pix
      ~Map.iter_by_coord
      ~Map.iter_by_image
      ~Map.iter_by_pix
      ~Map.pad
      ~Map.plot_interactive
      ~Map.read
      ~Map.reproject
      ~Map.set_by_coord
      ~Map.set_by_idx
      ~Map.set_by_pix
      ~Map.slice_by_idx
      ~Map.sum_over_axes
      ~Map.upsample
      ~Map.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data
   .. autoattribute:: geom
   .. autoattribute:: meta
   .. autoattribute:: quantity
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: coadd
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: fill_by_coord
   .. automethod:: fill_by_idx
   .. automethod:: fill_by_pix
   .. automethod:: from_geom
   .. automethod:: from_hdulist
   .. automethod:: get_by_coord
   .. automethod:: get_by_idx
   .. automethod:: get_by_pix
   .. automethod:: get_image_by_coord
   .. automethod:: get_image_by_idx
   .. automethod:: get_image_by_pix
   .. automethod:: interp_by_coord
   .. automethod:: interp_by_pix
   .. automethod:: iter_by_coord
   .. automethod:: iter_by_image
   .. automethod:: iter_by_pix
   .. automethod:: pad
   .. automethod:: plot_interactive
   .. automethod:: read
   .. automethod:: reproject
   .. automethod:: set_by_coord
   .. automethod:: set_by_idx
   .. automethod:: set_by_pix
   .. automethod:: slice_by_idx
   .. automethod:: sum_over_axes
   .. automethod:: upsample
   .. automethod:: write
